--- a/frontend/src/DataFetcher.css
+++ b/frontend/src/DataFetcher.css
@@ -10,9 +10,10 @@
 .title {
   font-size: 2rem;
   font-weight: bold;
-  margin-bottom: 20px;
+  margin-bottom: 10vh;
   color: #34495e;
   text-align: center;
+  
 }
 
 /* Input Group Styles */
@@ -57,7 +58,7 @@
 /* Table Styles */
 .table-container {
   overflow-x: auto;
-  margin-top: 15vh;
+  margin-top: 5vh;
 }
 
 .table {
